[bug 81384] Make the http 206 response go through nsHttpChannel::ProcessNormal.  r/sr=dougt